# kimchi-premium-arbitrage

./: .env.example  .env.executive  .env.notion  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BRANCH_STRATEGY.md  CLAUDE.md  CODE_REVIEW.md  EXECUTIVE_SETUP_COMPLETE.md  IMPLEMENTATION_REPORT.md  MODEL_COMPARISON_TEST_PLAN.md  Makefile  NOTION_DASHBOARD_GUIDE.md  NOTION_PROJECT_GUIDE.md  NOTION_SETUP_GUIDE.md  PAPER_TRADING_TEST_PLAN.md  PHASE_5_ADVANCED_FEATURES_REPORT.md  PRD_1_Trading_Core.md  PRD_2_ML_Engine.md  PRD_3_Dashboard.md  PRD_4_Risk_Management.md  PROJECT_IMPLEMENTATION_STATUS.md  PROJECT_STRUCTURE.md  QUICK_NOTION_TEST.md  README.md  REVISED_TEST_PLAN_V2.md  SCALPING_STRATEGY_REPORT.md  STRATEGY_KIMP_TREND_BREAKOUT.md  demo_multi_strategy.py  micro_scalping_results_20250824_213724.json  notion_workspace_setup.py  pyproject.toml  requirements.txt  setup.py  setup_notion.py  sync_manager.py  test_notification_demo.py  test_notion_connection.py  (+7 more)
backend/: __init__.py
backtesting/: __init__.py  backtest_engine.py  data_loader.py  engine.py  performance.py  performance_analyzer.py  report_generator.py  run_backtest.py  strategy_simulator.py  validator.py  walk_forward.py
config/: exchange_rate_config.json
configs/: cloudwatch-config.json
docs/: API_SECURITY.md  BACKTESTING_TEST_RESULTS.md  CI_FIX_SUMMARY.md  NOTION_CI_FIX_DOCUMENTATION.md  NOTION_COMPLETE_REPORT.md  NOTION_WORK_HISTORY.md  PROGRESS_REPORT.md
dynamic_hedge/: __init__.py  pattern_detector.py  position_manager.py  reverse_premium.py  trend_analysis.py
executive_control/: .env.multi_project  MULTI_PROJECT_README.md  MULTI_PROJECT_SETUP_COMPLETE.md  NOTION_KOREAN_GUIDE.md  __init__.py  architecture.json  auto_setup_dashboard.py  claude_code_interceptor.py  config.json  enrich_notion_tasks.py  find_notion_pages.py  initialize.py  kimp_notion_config.json  manual_init.py  multi_project_config.json  notion_design_guide.md  notion_governance_integration.py  notion_project_manager.py  notion_template_backup.py  notion_widgets.html  prd.md  run_multi_project_auto.py  run_multi_project_setup.py  setup_kimp_project_notion.py  setup_multi_project_dashboard.py  setup_notion_executive_dashboard.py  setup_strategy_notion.py  task_orchestrator.py  (+5 more)
(+266 files in other folders)
